--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -12,12 +12,16 @@
       </div>
       <div class="col-md-4">
         {{ range .left_side }}
+        
         <div class="mb-40 text-center text-md-left">
+          
           <i class="d-inlin-block h2 mb-10 {{ .icon }}"></i>
-          <h4 class="font-weight-bold mb-2">{{ .title | markdownify }}</h4>
-          <p>{{ .content | markdownify }}</p>
+          <a style="color: black;" href="{{ .link }}"><h4 class="font-weight-bold mb-2">{{ .title | markdownify }}</h4></a>
+          <a style="color: black;" href="{{ .link }}"><p>{{ .content | markdownify }}</p></a>
         </div>
+        
         {{ end }}
+      
       </div>
       <div class="col-md-4 text-center align-self-center mb-4 mb-md-0">
         <img class="img-fluid" src="{{ .image | absURL }}" alt="">
@@ -26,8 +30,8 @@
           {{ range .right_side }}
         <div class="mb-40 text-center text-md-left">
           <i class="d-inlin-block h2 mb-10 {{ .icon }}"></i>
-          <h4 class="font-weight-bold mb-2">{{ .title | markdownify }}</h4>
-          <p>{{ .content | markdownify }}</p>
+          <a style="color: black;" href="{{ .link }}"><h4 class="font-weight-bold mb-2">{{ .title | markdownify }}</h4></a>
+          <a style="color: black;" href="{{ .link }}"><p>{{ .content | markdownify }}</p></a>
         </div>
         {{ end }}
       </div>
